working on movile

--- a/imports/ui/users/actividad/actividad.html
+++ b/imports/ui/users/actividad/actividad.html
@@ -19,7 +19,7 @@
                     {{/if}}
                     {{#if colaboradores}}
                         <div style="margin-top:10px;max-height:165px;overflow-y:hidden">
-                            <span style="font-family:'Montserrat';margin-left:25px;font-weight: 700;font-size: 16px;line-height:30px;font-style: normal; color:white;">Colaboran: </span>
+                            <span style="font-family:'Montserrat';margin-left:25px;font-weight: 700;font-size: 16px;line-height:30px;font-style: normal; color:white;">Participan: </span>
                             {{#each colaboradores}}
                                 <a href="{{url}}"
                                 style="margin-left:5px; font-family: 'Open Sans', sans-serif;color:white;">{{nombre}}</a>
@@ -28,7 +28,7 @@
                     {{/if}}
 
                     {{#if caratula}}
-                        <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="galeriaFotos btn btn-lg" style="background-image:url('../icono_galeria.png');background-size:contain;background-repeat:no-repeat;width:80px;height:80px" ></span></div>
+                        <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="galeriaFotos btn btn-lg" style="background-image:url('../icono_galeria.png');background-size:contain;background-repeat:no-repeat;background-position:right;width:80px;height:80px" ></span></div>
                     {{/if}}
 
                     </div>
@@ -81,7 +81,7 @@
                             {{/if}}
                             {{#if colaboradores}}
                                 <div style="margin-top:10px;max-height:165px;overflow-y:hidden">
-                                    <span style="font-family:'Montserrat';margin-left:25px;font-weight: 700;font-size: 2vh;line-height:30px;font-style: normal; color:white;">Colaboran: </span>
+                                    <span style="font-family:'Montserrat';margin-left:25px;font-weight: 700;font-size: 2vh;line-height:30px;font-style: normal; color:white;">Participan: </span>
                                     {{#each colaboradores}}
                                         <a href="{{url}}"
                                            style="margin-left:5px; font-family: 'Open Sans', sans-serif;color:white;font-size: 2vh;">{{nombre}}</a>
