--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -13,7 +13,7 @@
 
                 <div style="margin-top:20px;padding:10px;width:100%;">
             <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:20px">
-                {{presentacion}}
+                {{{presentacion}}}
             </span>
                 </div>
 
