added modal for activities

--- a/imports/ui/users/templatesImages/textActivity.html
+++ b/imports/ui/users/templatesImages/textActivity.html
@@ -1,7 +1,7 @@
 <template name="textImpar">
     <div style="width:100%;height:400px;padding-left:60px">
         <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}
-            <a href="actividadInfo/{{_id}}" style="text-decoration: none"><h1
+            <a style="text-decoration: none"><h1
                     class="actividad-nombre">{{nombre}}</h1></a></div>
         {{>fechasDisplay}}
         <div style="margin-top:25px;max-height:165px;overflow-y:hidden">
@@ -17,7 +17,7 @@
 
 <template name="textPar">
     <div style="width:100%;height:400px;padding-right:60px">
-        <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<a href="actividadInfo/{{_id}}" style="text-decoration: none"><h1
+        <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<a style="text-decoration: none"><h1
                 class="actividad-nombre">{{nombre}}</h1></a></div>
         {{>fechasDisplay}}
         <div style="margin-top:25px;max-height:165px;overflow-y:hidden">
