--- a/imports/ui/users/actividad/actividad.html
+++ b/imports/ui/users/actividad/actividad.html
@@ -1,6 +1,6 @@
 <template name="actividadInfo">
     {{#if isDesktop}}
-    <div style="min-width:100wh;min-height:100vh;padding:10px">
+    <div style="{{#unless modal}}min-width:100wh;min-height:100vh;padding:10px{{/unless}}">
         <div style="width:900px;margin:auto">
             {{#with actividad}}
             <div class="row" style="background-color:#1d2e39;height:500px;margin-top:10px">
@@ -42,18 +42,22 @@
 
             </div>
             {{/with}}
+            {{#unless modal}}
             <div style="background-color:#2d3e54;position: fixed;width:100%;top:0px;left:0px;z-index:-1;padding-top:100px" >
                 <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
                 <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
             </div>
+            {{/unless}}
         </div>
     </div>
-    <div style="height:60px;width:100%">
+    {{#unless modal}}
+        <div style="height:60px;width:100%">
 
-    </div>
-    <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="z-index:1">
-        {{>barraHorizontal active=""}}
-    </div>
+        </div>
+        <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="z-index:1">
+            {{>barraHorizontal active=""}}
+        </div>
+    {{/unless}}
     {{else}}
         <div style="min-width:100wh;min-height:100vh;padding:10px">
             <div style="width:900px;margin:auto">
