--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -2,8 +2,26 @@
     {{#if isDesktop}}
         <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
             <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
-                <div style="width:100%;margin-bottom:10px;height:270px;background-image: url({{presentacionFoto}});background-size:cover; background-repeat:no-repeat;">
+                <div style="width:100%;margin-bottom:10px;height:270px;">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
+                    <div class="carousel-inner" style="height:270px;">
+                        {{#each fotos}}
+                            <div class="item {{isActive fotos=fotos}}" style="width:100%;height:270px">
+                                <img style="height:auto;width:100%;margin:auto" src="{{this}}" alt="{{this}}">
+                            </div>
+                        {{/each}}
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+
+                </div>
                 </div>
                 <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
                 NOSOTROS
