--- a/imports/ui/users/archivo/actividadesArchivo.html
+++ b/imports/ui/users/archivo/actividadesArchivo.html
@@ -30,7 +30,7 @@
                        <div class="col-md-11" style="padding-right:0px">
                            <div style="">
                                <a href="/actividadInfo/{{_id}}" style="text-decoration: none"><h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3></a>
-                               <span style="font-family:'Montserrat';font-weight: 700;font-size: 14px;line-height:15px;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
+                               <span style="font-family:'Open Sans';font-weight: 700;font-size: 14px;line-height:15px;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
                                <!--<span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>-->
                            </div>
                        </div>
@@ -87,7 +87,7 @@
                                         <a href="/actividadInfo/{{_id}}" style="text-decoration: none"><h3 class="actividad-nombre" style="text-align:left;font-size:3vh;">{{nombre}}</h3></a>
                                     </div>
                                     <div class="col-sm-12">
-                                        <span style="font-family:'Montserrat';font-weight: 700;font-size: 2vh;line-height:1vh;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
+                                        <span style="font-family:'Open Sans';font-weight: 700;font-size: 2vh;line-height:1vh;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
                                     </div>
 
                             </div>
