--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -288,5 +288,6 @@
 {{/if}}
     <script type="text/javascript" src="skrollr.min.js"></script>
     <div class="turnDeviceNotification"></div>
+    <!-- jQuery -->
 </template>
 
