--- a/imports/ui/users/archivo/librosArchivo.html
+++ b/imports/ui/users/archivo/librosArchivo.html
@@ -25,7 +25,7 @@
                     <div style="background-color:#1d2e39;height:405px;">
                         <img src="{{caratula}}" style="max-width:80%;margin-left:10%;margin-top:10%">
                         <h3 class="actividad-nombre" style="margin-left:10%;margin-right:10%;line-height:22px;font-size:18px;margin-top:5px;">{{nombre}}</h3>
-                        <span style="font-family:'Montserrat';font-weight: 700;font-size: 14px;line-height:15px;margin-left:10%;font-style: normal; color:white;">{{autor}}</span><br>
+                        <span style="font-family:  'Open Sans';font-weight: 700;font-size: 14px;line-height:15px;margin-left:10%;font-style: normal; color:white;">{{autor}}</span><br>
                         {{#if actividadId}}
                             <a  href="/actividadInfo/{{actividadId}}" class="btn btn-lg" style="float:right;background-image:url('../icono_mas.png');background-size:contain;background-repeat:no-repeat;width:60px;height:60px;position:absolute;bottom:5px;right:10px" ></a>
                         {{/if}}
