--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -29,7 +29,7 @@
             </div>
             <div style="width:900px;margin:auto">
 
-                <div style="margin-top:20px;padding:10px;width:100%;">
+                <div style="margin-top:20px;padding:10px;width:100%;text-align:justify">
             <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:20px">
                 {{{presentacion}}}
             </span>
@@ -37,12 +37,12 @@
 
                 {{#each personas}}
                     <div class="row" style="padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
-                        <div class="col-md-4 col-sm-12" style="padding-left:0px;">
+                        <div class="col-md-3 col-sm-12" style="padding-left:0px;">
                             <div style="padding-top:20px;padding-left: 10px">
                                 <img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%">
                             </div>
                         </div>
-                        <div class="col-md-8 col-sm-12" style="padding-right:0px">
+                        <div class="col-md-9 col-sm-12" style="padding-right:0px">
                             <div style="padding:20px;">
                                 <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
                                 <span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>
