--- a/imports/ui/admin/login/login.html
+++ b/imports/ui/admin/login/login.html
@@ -1,4 +1,5 @@
 <template name="Login">
+    {{> loginButtons}}
     <br>
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-primary">
