--- a/imports/ui/admin/aliados/aliados.html
+++ b/imports/ui/admin/aliados/aliados.html
@@ -45,7 +45,7 @@
                                             </form>
                                         </div>
                                     </div>
-                                    <button class="btn btn-default btn-remove-person margin-left-15 ">
+                                    <button class="btn btn-default btn-remove-aliado margin-left-15 ">
                                         <i class="fa fa-trash fa-fw"></i>
                                     </button>
                                     <hr>
