--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -28,13 +28,14 @@
             </span>
             </div>
             <div style="width:900px;margin:auto">
-
-                <div style="margin-top:20px;padding:10px;width:100%;text-align:justify">
-            <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:20px">
+            <div style="margin-bottom:30px;margin-top:20px;padding:10px;width:100%;text-align:justify">
+            <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:16px">
                 {{{presentacion}}}
             </span>
                 </div>
-
+                <span style="margin-top:15px; font-family:'Montserrat';font-weight: 700;font-size: 20px;line-height:30px;font-style: normal; color:white;">
+                    COORDINADORAS
+                </span>
                 {{#each personas}}
                     <div class="row" style="padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
                         <div class="col-md-3 col-sm-12" style="padding-left:0px;">
@@ -45,7 +46,7 @@
                         <div class="col-md-9 col-sm-12" style="padding-right:0px">
                             <div style="padding:20px;">
                                 <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
-                                <span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>
+                                <span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 14px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>
                             </div>
                         </div>
 
