--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -17,14 +17,15 @@
                 <div class="persona" style="margin-left:65px;margin-right:65px">
                     <div class="row">
                     {{#each colaboradores}}
-                        <a href="{{url}}"><div class="col-md-4" style="margin-top:5px">
+                        <a href="{{url}}" class="colaborador-link" target="_blank"><div class="col-md-4" style="margin-top:5px">
                             <div class="logo-button" style="border-width:0px;height:250px;overflow-y: hidden;display:table">
                                 <div style="padding:10px;display:table-cell;vertical-align: middle;max-height: 250px">
                                     <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%;max-height: 250px">
                                 </div>
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
-                        </div></a>
+                        </div>
+                        </a>
                     {{/each}}
                         <div class="letritas-container" >
                             <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
